TPC2 (v1.1) - Versão alternativa da função 'read_stdin()' adicionada de modo a permitir a leitura de inputs no Jupyter Notebook

--- a/TPC2/PL2023_TPC2.ipynb
+++ b/TPC2/PL2023_TPC2.ipynb
@@ -51,14 +51,25 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obs: Recomenda-se a execução do programa utilizando o ficheiro 'TPC2.py'."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_stdin():\n",
+    "def read_stdin(): # versão alternativa da função 'read_stdin()' apresentada no ficheiro 'TPC2.py', permitindo a leitrua de inputs no Jupyter Notebook\n",
     "    text = \"\"\n",
-    "    for line in sys.stdin:\n",
+    "    while True:\n",
+    "        line = input()\n",
+    "        if not line:\n",
+    "            break\n",
     "        text += line\n",
     "    return text\n",
     "\n",
