TPC2 (v1.2) - Correção da apresentação do output do programa

--- a/TPC2/PL2023_TPC2.ipynb
+++ b/TPC2/PL2023_TPC2.ipynb
@@ -132,7 +132,8 @@
     "    print(\"Input:\")\n",
     "    text = read_stdin()\n",
     "    numbers = parse(text)\n",
-    "    if len(text) == 0 or text[-1].strip() == '':\n",
+    "    lines = text.split(\"\\n\")\n",
+    "    if lines[-1].strip() == '':\n",
     "        print(\"\\nOutput:\")\n",
     "    else:\n",
     "        print(\"\\n\\nOutput:\")\n",
