TPC4 (v1.2.1) - Correção no texto

--- a/TPC4/PL2023_TPC4.ipynb
+++ b/TPC4/PL2023_TPC4.ipynb
@@ -170,7 +170,7 @@
         "\n",
         "<li><b>len/length</b>: calcula o comprimento da lista;</li> <br>\n",
         "\n",
-        "<li><b>reverse</b>: retorna a lista organizada em ordem inversa;</li> <br>\n",
+        "<li><b>reverse</b>: retorna a lista organizada por ordem inversa;</li> <br>\n",
         "\n",
         "<li><b>sorted/sorted_asc</b>: retorna a lista ordenada por ordem ascendente;</li> <br>\n",
         "\n",
@@ -186,8 +186,16 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Obs: Recomenda-se a execução do programa utilizando o ficheiro 'TPC4.py'."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -409,7 +417,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.10"
+      "version": "3.10.6"
     }
   },
   "nbformat": 4,
