--- a/TPC5/PL2023_TPC5.ipynb
+++ b/TPC5/PL2023_TPC5.ipynb
@@ -194,7 +194,9 @@
         "                ms = re.match(r\"(?i)\\s*MOEDA\\b\", line).span()\n",
         "                string_moedas = line[ms[1]:]\n",
         "                \n",
-        "                lista_moedas = re.split(r\",\", string_moedas)\n",
+        "                lista_moedas = []\n",
+        "                if string_moedas.strip() != \"\":\n",
+        "                    lista_moedas = re.split(r\",\", string_moedas)\n",
         "                \n",
         "                soma, moedas_invalidas = soma_moedas(lista_moedas)\n",
         "                saldo += soma\n",
