TPC5 (v1.1.6) - Adicionado custo de cada chamada nas mensagens da máquina ao utilizador

--- a/TPC5/PL2023_TPC5.ipynb
+++ b/TPC5/PL2023_TPC5.ipynb
@@ -228,7 +228,7 @@
         "                                saldo -= Decimal('0.25')\n",
         "                                print('maq: \"saldo = ' + saldo_to_string(saldo) + '\"')\n",
         "                            else:\n",
-        "                                print('maq: \"Saldo insuficiente.\"')\n",
+        "                                print('maq: \"Saldo insuficiente. Custo da chamada = 0e25c.\"')\n",
         "                            \n",
         "                        elif num[:3] == \"800\":\n",
         "                            print('maq: \"saldo = ' + saldo_to_string(saldo) + '\"')\n",
@@ -238,7 +238,7 @@
         "                                saldo -= Decimal('0.10')\n",
         "                                print('maq: \"saldo = ' + saldo_to_string(saldo) + '\"')\n",
         "                            else:\n",
-        "                                print('maq: \"Saldo insuficiente.\"')\n",
+        "                                print('maq: \"Saldo insuficiente. Custo da chamada = 0e10c.\"')\n",
         "                        \n",
         "                        else:\n",
         "                            print('maq: \"Esse número não é permitido neste telefone. Queira discar novo número!\"')\n",
@@ -248,7 +248,7 @@
         "                            saldo -= Decimal('1.5')\n",
         "                            print('maq: \"saldo = ' + saldo_to_string(saldo) + '\"')\n",
         "                        else:\n",
-        "                            print('maq: \"Saldo insuficiente.\"')\n",
+        "                            print('maq: \"Saldo insuficiente. Custo da chamada = 1e50c.\"')\n",
         "                                \n",
         "                    else:\n",
         "                        print('maq: \"Esse número não é permitido neste telefone. Queira discar novo número!\"')\n",
